--- a/src/app/modules/docente-capacitador/register-area/pages/register-area/register-area.component.html
+++ b/src/app/modules/docente-capacitador/register-area/pages/register-area/register-area.component.html
@@ -29,11 +29,11 @@
   <h2>Áreas</h2>
   <table class="table">
     <thead>
-      <tr>
-        <th>Código</th>
-        <th>Nombre</th>
-        <th>Estado</th>
-        <th>Acciones</th>
+      <tr class="bg-primary text-light">
+        <th scope="col">Código</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
