--- a/src/app/modules/docente-capacitador/register-detalle-meva/pages/register-detalle-meva/register-detalle-meva.component.html
+++ b/src/app/modules/docente-capacitador/register-detalle-meva/pages/register-detalle-meva/register-detalle-meva.component.html
@@ -37,11 +37,11 @@
   <h2>Detalles </h2>
   <table class="table">
     <thead>
-      <tr>
-        <th>Técnica</th>
-        <th>Instrumento</th>
-        <th>Mecanismo de evaluación</th>
-        <th>Acciones</th>
+      <tr class="bg-primary text-light">
+        <th scope="col">Técnica</th>
+        <th scope="col">Instrumento</th>
+        <th scope="col">Mecanismo de evaluación</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
