--- a/src/app/modules/docente-capacitador/register-especialidad/pages/register-especialidad/register-especialidad.component.html
+++ b/src/app/modules/docente-capacitador/register-especialidad/pages/register-especialidad/register-especialidad.component.html
@@ -35,11 +35,11 @@
   <h2>Especialidades</h2>
   <table class="table">
     <thead>
-      <tr>
-        <th>Código</th>
-        <th>Nombre</th>
-        <th>Área</th>
-        <th>Acciones</th>
+      <tr class="bg-primary text-light">
+        <th scope="col">Código</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Área</th>
+        <th scope="col">Acciones</th>
       </tr>
     </thead>
     <tbody>
